[project]
name = "bumble-auto-liker"
version = "1.0.0"
description = "Bumble profile scraper with automatic swiping"
requires-python = ">=3.8"
dependencies = [
    "selenium>=4.8.3,<5.0",
    "undetected-chromedriver>=3.5.0,<4.0",
    "webdriver-manager>=3.8.6,<4.0",
    "Pillow>=10.3.0,<11.0",
    "beautifulsoup4>=4.12.0,<5.0",
    "lxml>=5.0.0,<6.0",
    "playwright>=1.40.0,<2.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

